Correção de bugs do js e inicio de implementação do footer

--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
             <div class="output">
                 <h3></h3>
                 <img class="apodImg" id="apodImg" src="">
-                <iframe id="apodVideo"></iframe>
-                <p id="description"></p>
+                <iframe class="apodVideo" id="apodVideo"></iframe>
+                <p class="description" id="description"></p>
             </div>
         </section>
     </main>
-
+    <footer>
+        <p>Todos os direitos reservados.Projeto para fins educacionais.<br> Rodrigo Assunção</p>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="index.js"></script>
 </body>
