Alteração de estilo da página

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <header>
         <div class="logo">
             <img class="imglogo" src="media/logo.png" alt="logo da NASA">
-            <h1>Foto Astronômica</h1>
+            <h1>Media Astronômica</h1>
             <img class="imglogo" src="media/logo.png" alt="logo da NASA">
         </div>
     </header>
     <main>
-        <section>
+        <section class="initialSec" id="initialSec">
             <div class="initial">
+                <p class="info">Essa é sua mais nova experiência astronômica onde você poderá selecionar uma data aleatória entre Junho de 1995 até os dias de hoje, e irá receber uma mídia vindo diretamente da NASA daquele dia e uma breve descrição do fenômeno apresentado.</p>
                 <h2>Clique no foguete!</h2>
                 <img id="foguete" class="foguete" src="media/rocket.gif" alt="foguete">
             </div>
         </section>
         <section id="showup" class="showup">
-            <p class="info">Essa é sua mais nova experiência astronômica onde você poderá selecionar uma data aleatória entre Junho de 1995 até os dias de hoje, e irá receber uma mídia vindo diretamente da NASA daquele dia e uma breve descrição do fenômeno apresentado.</p>
             <div class="user">
                 <label for="">Selecione uma data</label>
                 <input id="inputDate" type="date">                
@@ -43,7 +43,10 @@
         </section>
     </main>
     <footer>
-        <p>Todos os direitos reservados.Projeto para fins educacionais.<br> Rodrigo Assunção</p>
+        <a href="https://github.com/Digoassun" target="_blank"><img class="link" src="media/github.png" alt=""></a>
+        <p>Todos os direitos reservados. Projeto para fins educacionais.<br>Projeto de Rodrigo Assunção</p>
+        <a href="https://www.linkedin.com/in/rodrigo-assun/" target="_blank"><img class="link"
+                src="media/linkedin.png" alt=""></a>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="index.js"></script>
