Add copyright na requisição e alteração de estilo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nasa APOD</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 
@@ -20,7 +24,9 @@
     <main>
         <section class="initialSec" id="initialSec">
             <div class="initial">
-                <p class="info">Essa é sua mais nova experiência astronômica onde você poderá selecionar uma data aleatória entre Junho de 1995 até os dias de hoje, e irá receber uma mídia vindo diretamente da NASA daquele dia e uma breve descrição do fenômeno apresentado.</p>
+                <p class="info">Essa é sua mais nova experiência astronômica onde você poderá selecionar uma data
+                    aleatória entre Junho de 1995 até os dias de hoje, e irá receber uma mídia vindo diretamente da NASA
+                    daquele dia e uma breve descrição do fenômeno apresentado.</p>
                 <h2>Clique no foguete!</h2>
                 <img id="foguete" class="foguete" src="media/rocket.gif" alt="foguete">
             </div>
@@ -28,7 +34,7 @@
         <section id="showup" class="showup">
             <div class="user">
                 <label for="">Selecione uma data</label>
-                <input id="inputDate" type="date">                
+                <input id="inputDate" type="date" min="1995-06-16">
                 <div class="btns">
                     <button class="button" id="btnInput">Data Selecionada</button>
                     <button id="buttonDay" class="button">Mídia do dia</button>
@@ -39,14 +45,15 @@
                 <img class="apodImg" id="apodImg" src="">
                 <iframe class="apodVideo" id="apodVideo"></iframe>
                 <p class="description" id="description"></p>
+                <p class="copyright" id="copyright"></p>
             </div>
         </section>
     </main>
     <footer>
         <a href="https://github.com/Digoassun" target="_blank"><img class="link" src="media/github.png" alt=""></a>
         <p>Todos os direitos reservados. Projeto para fins educacionais.<br>Projeto de Rodrigo Assunção</p>
-        <a href="https://www.linkedin.com/in/rodrigo-assun/" target="_blank"><img class="link"
-                src="media/linkedin.png" alt=""></a>
+        <a href="https://www.linkedin.com/in/rodrigo-assun/" target="_blank"><img class="link" src="media/linkedin.png"
+                alt=""></a>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="index.js"></script>
